[package]
name = "schlep"
version = "0.1.0"
edition = "2021"
default-run = "schlep"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
async-trait = "0.1.86"
axum = { version = "0.8.1", features = ["http1", "http2"] }
base64ct = { version = "1.6.0", features = ["alloc", "std"] }
bitflags = { version = "2.8", features = ["serde", "bytemuck"] }
camino = { version = "1.1.9", features = ["serde1"] }
cap-fs-ext = { version = "3.4.2", features = ["fs_utf8"] }
cap-primitives = "3.4.2"
cap-std = { version = "3.4.2", features = ["fs_utf8"] }
const-str = "0.6.2"
deadpool = "0.12.2"
deadpool-redis = { version = "0.19.0", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["debug"] }
digest = "0.10.7"
figment = { version = "0.10.19", features = ["env", "parking_lot", "toml"] }
fs-set-times = "0.20.2"
generic-array = { version = "0.14.7" }
http = "1.2.0"
humantime-serde = "1.1.1"
ldap3 = { version = "0.11.5", default-features = false, features = ["tls-rustls"] }
md-5 = "0.10.6"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.16.2", default-features = false, features = [
    "async-runtime",
    "tracing",
] }
metrics-tracing-context = "0.18.0"
metrics-util = { version = "0.19.0", features = ["ahash"] }
mimalloc = "0.1.43"
parking_lot = "0.12.3"
path-absolutize = "3.1.1"
pathdiff = { version = "0.2.3", features = ["camino"] }
rand = "0.8.5"
redis = { version = "0.28.2", features = [
    "aio",
    "ahash",
    "tokio-comp",
    "tokio-rustls-comp",
    "json",
] }
redis-macros = { version = "0.5.0", default-features = false, features = ["macros"] }
russh = "0.50.2"
russh-sftp = "2.0.8"
rustix = { version = "0.38.44", features = ["fs"] }
schemars = { version = "0.8.21", features = ["url"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.138"
sha1 = "0.10.6"
sha2 = "0.10.8"
shlex = "1.3.0"
ssh-key = { version = "=0.6.9", features = ["serde"], package = "internal-russh-forked-ssh-key" }
thiserror = "2.0.11"
thiserror-ext = "0.2.1"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-log = { version = "0.2.0", features = ["ahash"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "time",
    "local-time",
    "smallvec",
    "parking_lot",
] }
trait_enum = "0.5.0"
url = { version = "2.5.4", features = ["serde"] }
whirlwind = "0.1.1"

[build-dependencies]
anyhow = "1.0.95"
vergen-gitcl = { version = "1.0.5", features = ["build", "cargo", "rustc"] }

[profile.release]
lto = true
